[project]
name = "law-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-ollama>=0.3.3",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.4.8",
    "ollama>=0.5.1",
    "pypdf>=5.6.0",
    "qdrant-client>=1.14.2",
    "transformers>=4.52.4",
]
